Add basic color palette and fonts

--- a/src/assets/styles/setup/_variables.scss
+++ b/src/assets/styles/setup/_variables.scss
@@ -7,6 +7,54 @@ $clr5: #dff0ea;
 $clr6: #fff;
 $clr7: #222;
 
+// Main Colors
+$bgc-main: #eceff8;
+$clr-main: #323338;
+
+//Label Color Options
+$clr-label-1: #9dd327;
+$clr-label-2: #cbb641;
+$clr-label-3: #ffca00;
+$clr-label-4: #ff642e;
+$clr-label-5: #ffaead;
+$clr-label-6: #ff7575;
+$clr-label-7: #ba3354;
+$clr-label-8: #ff017e;
+$clr-label-9: #ff5ac3;
+$clr-label-10: #faa1f1;
+$clr-label-11: #794bd0;
+$clr-label-12: #7e3b8a;
+$clr-label-13: #401694;
+$clr-label-14: #5559df;
+$clr-label-15: #235091;
+$clr-label-16: #579bfc;
+$clr-label-17: #4ecdc6;
+$clr-label-18: #66cbff;
+$clr-label-19: #74b0cc;
+$clr-label-20: #9aadbc;
+$clr-label-21: #757575;
+$clr-label-22: #333333;
+$clr-label-23: #7f5348;
+$clr-label-24: #e384bc;
+$clr-label-25: #bda58b;
+$clr-label-26: #a0e3f6;
+$clr-label-27: #cd9282;
+$clr-label-28: #216fde;
+$clr-label-29: #175a63;
+$clr-label-30: #bea8fa;
+$clr-label-31: #a9bee9;
+$clr-label-32: #9d9ab9;
+$clr-label-33: #563e3e;
+
+
+// Status Colors
+$clr-status-new: #c4c4c4;
+$clr-status-working: #fdab3d;
+$clr-status-done: #00c875;
+$clr-status-other: #007eb5;
+$clr-status-stuck: #df2f4a;
+
+
 
 // Breakpoints
 $mobile-breakpoint: 460px;
