--- a/src/assets/styles/basics/_base.scss
+++ b/src/assets/styles/basics/_base.scss
@@ -8,9 +8,9 @@
 }
 
 html {
-    font-family: montserrat;
+    font-family: figtree;
     line-height: 1.6;
-    color: $clr2;
+    color: $clr-main;
 }
 
 body {
@@ -18,16 +18,25 @@ body {
     margin: 0;
     max-width: 1024px;
     margin: auto;
+    background-color: $bgc-main;
+
 }
 
-h1, h2, h3, h4, h5, h6 {
-    font-family: caveat;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: poppins;
     margin: 0 0 0.6em;
     line-height: 1;
 }
 
 
-section, main, footer {
+section,
+main,
+footer {
     padding: 5px;
 }
 
@@ -42,7 +51,7 @@ p {
 a {
     text-decoration: none;
 }
+
 a:hover {
     text-decoration: underline;
 }
-
