--- a/src/assets/styles/setup/_typography.scss
+++ b/src/assets/styles/setup/_typography.scss
@@ -1,8 +1,47 @@
-@font-face {
-    // font-family: caveat;
-    // src: url(../../fonts/Caveat/Caveat-Regular.ttf);
+// @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
+
+@font-face{
+    font-family: poppins-ex-light;
+    src: url(/src/assets/styles/fonts/Poppins/Poppins-ExtraLight.ttf);
 }
-@font-face {
-    // font-family: montserrat;
-    // src: url(../../fonts/Montserrat/Montserrat-Regular.ttf);
+@font-face{
+    font-family: poppins-thin;
+    src: url(/src/assets/styles/fonts/Poppins/Poppins-Thin.ttf);
+}
+@font-face{
+    font-family: poppins-light;
+    src: url(/src/assets/styles/fonts/Poppins/Poppins-Light.ttf);
+}
+@font-face{
+    font-family: poppins;
+    src: url(/src/assets/styles/fonts/Poppins/Poppins-Regular.ttf);
+}
+@font-face{
+    font-family: poppins-medium;
+    src: url(/src/assets/styles/fonts/Poppins/Poppins-Medium.ttf);
+}
+@font-face{
+    font-family: poppins-semi;
+    src: url(/src/assets/styles/fonts/Poppins/Poppins-SemiBold.ttf);
+}
+@font-face{
+    font-family: poppins-bold;
+    src: url(/src/assets/styles/fonts/Poppins/Poppins-Bold.ttf);
+}
+@font-face{
+    font-family: poppins-ex-bold;
+    src: url(/src/assets/styles/fonts/Poppins/Poppins-ExtraBold.ttf);
+}
+@font-face{
+    font-family: poppins-black;
+    src: url(/src/assets/styles/fonts/Poppins/Poppins-Black.ttf);
+}
+
+@font-face{
+    font-family: figtree;
+    src: url(/src/assets/styles/fonts/Figtree/Figtree-Regular.ttf);
+}
+@font-face{
+    font-family: figtree-bold;
+    src: url(/src/assets/styles/fonts/Figtree/Figtree-Bold.ttf);
 }
