--- a/src/assets/styles/setup/_variables.scss
+++ b/src/assets/styles/setup/_variables.scss
@@ -11,6 +11,10 @@ $clr7: #222;
 $bgc-main: #eceff8;
 $clr-main: #323338;
 
+//Button Colors
+$clr-btn: #0073ea;
+$clr-btn-txt: #ffffff;
+
 //Label Color Options
 $clr-label-1: #9dd327;
 $clr-label-2: #cbb641;
