--- a/src/assets/styles/basics/_base.scss
+++ b/src/assets/styles/basics/_base.scss
@@ -14,6 +14,7 @@ html {
     border: 0;
     font-size: 100%;
     vertical-align: baseline;
+    text-align: center;
 }
 
 article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section {
