--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -24,8 +24,7 @@
 @import "cmps/AppFooter";
 @import "cmps/UserMsg";
 @import "cmps/ShoppingCart";
-@import "cmps/_Board-sidebar";
-
+@import "cmps/board-header";
 
 
 
