--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -25,6 +25,10 @@
 @import "cmps/UserMsg";
 @import "cmps/ShoppingCart";
 @import "cmps/_Board-sidebar";
+@import "cmps/_board-details";
+@import "cmps/_board-preview";
+@import "cmps/_board-filter";
+@import "cmps/_board-index";
 
 
 
