Structure preview and sidebar

--- a/src/assets/styles/basics/_base.scss
+++ b/src/assets/styles/basics/_base.scss
@@ -24,6 +24,7 @@ body {
     font-family: figtree;
     background-color: $bgc-main;
     line-height: 1;
+    margin: 0;
 
 }
 
@@ -45,7 +46,7 @@ h6 {
 section,
 main,
 footer {
-    padding: 5px;
+    // padding: 5px;
 }
 
 img {
@@ -62,4 +63,9 @@ a {
 
 a:hover {
     text-decoration: underline;
+}
+
+main{
+   display: grid; 
+   grid-auto-flow: column;
 }
