--- a/src/assets/styles/cmps/_board-index.scss
+++ b/src/assets/styles/cmps/_board-index.scss
@@ -1,6 +1,6 @@
 .board-index {
-    position: relative;
-    display: grid;
-    grid-template-columns: auto auto;
-
+    // position: relative;
+    // display: grid;
+    // grid-auto-flow: column;
+    
 }
