--- a/src/assets/styles/cmps/_Board-sidebar.scss
+++ b/src/assets/styles/cmps/_Board-sidebar.scss
@@ -1,9 +1,10 @@
 .board-sidebar {
     background-color: #ffffff;
-    position: fixed;
-    left: 0;
+    position: relative;
+    width: 270px;
     height: 100vh;
     border-radius: 1em;
+    transition: 0.6s;
 
 
     .actions-sidebar-upper {
