--- a/src/assets/styles/cmps/AppHeader.scss
+++ b/src/assets/styles/cmps/AppHeader.scss
@@ -1,7 +1,7 @@
 .app-header {
-    background-color: $clr4;
-    padding: 10px;
-
+    // background-color: $clr4;
+    // padding: 10px;
+    height: 2.75em;
 
     .user-info {
         // background-color: $clr2;
@@ -31,7 +31,7 @@
 
     nav {
         font-size: .8em;
-        background-color: $clr5;
+        // background-color: $clr5;
         padding: 5px;
 
     }
