--- a/src/assets/styles/cmps/_board-details.scss
+++ b/src/assets/styles/cmps/_board-details.scss
@@ -1,5 +1,9 @@
 .board-details {
     display: grid ;
     position: relative; 
-    width: 100%;
+    background-color: $clr6;
+    display: grid;
+    grid-template-rows: 190px;
+    border-radius: 0.5em;
+    padding: 5px;
 }
