--- a/src/assets/styles/cmps/_board-index.scss
+++ b/src/assets/styles/cmps/_board-index.scss
@@ -1,6 +1,8 @@
 .board-index {
-    // position: relative;
-    // display: grid;
-    // grid-auto-flow: column;
-    
+    position: absolute;
+    width: 100%;
+    display: grid; 
+    grid-auto-flow: column;
+    grid-template-columns: 270px;
+    column-gap: 0.8em;
 }
