--- a/src/assets/styles/cmps/_board-header.scss
+++ b/src/assets/styles/cmps/_board-header.scss
@@ -1,7 +1,11 @@
-.board-header{
-    font-size: em(24px);
-    letter-spacing: -.1px;
-    padding: 0 4px;
-    min-width: 0;
-    border: 1px solid transparent;
-}    
+.board-header-wrapper {
+    & h2 {
+
+        font-size: em(24px);
+        letter-spacing: -.1px;
+        padding: 0 4px;
+        min-width: 0;
+        line-height: 30px;
+        border: 1px solid transparent;
+    }
+}
