--- a/src/assets/styles/basics/_base.scss
+++ b/src/assets/styles/basics/_base.scss
@@ -22,7 +22,7 @@ article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section {
 
 body {
     font-family: figtree;
-    background-color: $bgc-main;
+    background-color: $bgc-page;
     line-height: 1;
     margin: 0;
 }
