--- a/src/assets/styles/setup/_variables.scss
+++ b/src/assets/styles/setup/_variables.scss
@@ -8,7 +8,11 @@ $clr6: #fff;
 $clr7: #222;
 
 // Main Colors
-$bgc-main: #eceff8;
+$bgc-page: #eceff8;
+$clr-main: #323338;
+
+//Cmp Colors
+$bgc-main: #ffffff;
 $clr-main: #323338;
 
 //Button Colors
