--- a/src/assets/styles/basics/_helpers.scss
+++ b/src/assets/styles/basics/_helpers.scss
@@ -22,6 +22,10 @@
     &.justify-center {
         justify-content: center;
     }
+    &.justify-between {
+        justify-content: space-between;
+    }
+
     &.align-center {
         align-items: center;
     }
