--- a/src/assets/styles/setup/_variables.scss
+++ b/src/assets/styles/setup/_variables.scss
@@ -11,15 +11,15 @@ $clr7: #222;
 $bgc-page: #eceff8;
 $clr-main: #323338;
 
-//Cmp Colors
+// Cmp Colors
 $bgc-main: #ffffff;
 $clr-main: #323338;
 
-//Button Colors
+// Button Colors
 $clr-btn: #0073ea;
 $clr-btn-txt: #ffffff;
 
-//Label Color Options
+// Label Color Options
 $clr-label-1: #9dd327;
 $clr-label-2: #cbb641;
 $clr-label-3: #ffca00;
@@ -62,7 +62,15 @@ $clr-status-done: #00c875;
 $clr-status-other: #007eb5;
 $clr-status-stuck: #df2f4a;
 
+// Header Text Sizes
+$font-size-h1: em(100px);
+$font-size-h2: em(24px);
+$font-size-h3: em(24px);
+$font-size-h4: em(18px);
+$font-size-h5: 1em;
 
+// Subtext Sizes
+$font-size-subtext: em(14px);
 
 // Breakpoints
 $mobile-breakpoint: 460px;
