Input width change

--- a/src/assets/styles/cmps/_Board-sidebar.scss
+++ b/src/assets/styles/cmps/_Board-sidebar.scss
@@ -90,4 +90,12 @@
     .actions-sidebar-upper:hover {
         background-color: #eceff8;
     }
+
+    .input-sidebar {
+        border-radius: 4px;
+        outline: 1px solid #d0d4e4;
+        border: none;
+        height: 2.5em;
+        width: 14em;
+    }
 }
