--- a/src/assets/styles/cmps/_board-header.scss
+++ b/src/assets/styles/cmps/_board-header.scss
@@ -1,22 +1,13 @@
 .board-header-wrapper {
-    // background-color: $bgc-main;
+    padding: 30px 30px 0px 30px;
+    padding-top: 16px;
+    padding-left: 38px;
 
-    .board-header-top .board-title * {
+    .board-header-top >* h2  {
         font-family: poppins-medium;
-        width: auto
-        
-        // .edit-input {
-        //     font-size: 100px;
-        // }
+        width: auto;
+        padding: 0 4px;
+        min-width: 0;
+        border: 1px solid transparent;
     }
-
-
-    // #b-head {
-    ; // Adjusts font size for headings within .board-title
-    padding: 0 4px;
-    min-width: 0;
-    border: 1px solid transparent;
-
-
-    // }
 }
