--- a/src/assets/styles/cmps/_board-preview.scss
+++ b/src/assets/styles/cmps/_board-preview.scss
@@ -2,4 +2,11 @@
     display: grid;
     position: relative;
     width: 100%;
+    box-sizing: content-box;
+    padding-bottom: em(40px);
+    padding-left: em(40px);
+
+    & ul{
+        list-style: none;
+    }
 }
