Side bar actions

--- a/src/assets/styles/basics/_base.scss
+++ b/src/assets/styles/basics/_base.scss
@@ -147,6 +147,14 @@ summary {
     vertical-align: baseline
 }
 
-// li {
-//     list-style: none;
-// }
+.show {
+    display: block;
+}
+
+.hide {
+    display: none;
+}
+
+.active{
+    color:#323338;
+}
