Start scss structure groups and lists

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -31,6 +31,9 @@
 @import "cmps/board-index";
 @import "cmps/board-header";
 @import "cmps/board-list";
+@import "cmps/group-list";
+@import "cmps/task-list";
+@import "cmps/task-preview";
 
 
 
