--- a/src/assets/styles/cmps/_Board-sidebar.scss
+++ b/src/assets/styles/cmps/_Board-sidebar.scss
@@ -3,7 +3,7 @@
     position: relative;
     width: 270px;
     height: 100vh;
-    border-radius: 1em;
+    border-radius: 0 0.5em 0 0;
 
     .actions-sidebar-upper {
         line-height: 20px;
