--- a/src/assets/styles/cmps/_board-index.scss
+++ b/src/assets/styles/cmps/_board-index.scss
@@ -1,8 +1,8 @@
+
 .board-index {
-    position: absolute;
-    width: 100%;
-    display: grid; 
-    grid-auto-flow: column;
-    grid-template-columns: 270px;
-    column-gap: 0.8em;
+display: grid;
+grid-template-columns: auto 1fr;
+grid-template-rows: auto 1fr;
+column-gap: 12px;
+overflow: hidden;
 }
