--- a/src/assets/styles/cmps/_Board-sidebar.scss
+++ b/src/assets/styles/cmps/_Board-sidebar.scss
@@ -4,6 +4,7 @@
     width: 270px;
     height: 100vh;
     border-radius: 0 0.5em 0 0;
+    transition: 0.2s;
 
     .actions-sidebar-upper {
         line-height: 20px;
