--- a/src/assets/styles/setup/_variables.scss
+++ b/src/assets/styles/setup/_variables.scss
@@ -19,6 +19,9 @@ $clr-main: #323338;
 $clr-btn: #0073ea;
 $clr-btn-txt: #ffffff;
 
+//Border Colors 
+$clr-border: #d0d4e4;
+
 // Label Color Options
 $clr-label-1: #9dd327;
 $clr-label-2: #cbb641;
