--- a/src/assets/styles/cmps/_board-header.scss
+++ b/src/assets/styles/cmps/_board-header.scss
@@ -2,21 +2,34 @@
     padding: 30px 30px 0px 30px;
     padding-top: 16px;
     padding-left: 38px;
+    position: sticky;
+    top: 0;
+    // z-index: 10;
 
-    .board-header-top >* h2  {
-        font-size: 32px;
+    .board-header-top   {
         width: auto;
         padding: 0 4px;
         min-width: 0;
         border: 1px solid transparent;     
     }
-
-    .editable-container * {
-        font-family: poppins-medium;
+    
+    .editable-container  {
+        
+        .elementTypeH1_0831755125{
+            font-family: poppins-medium;
+        }
         
         
     }
     .board-title-right{
         gap: em(8px);
+    }
+
+    .board-header-bottom{
+        margin-top: em(8px);
+        border-bottom: 1px solid $clr-border;
+        .tabsWrapper_63f5a9c09{
+            padding-bottom: 0;
+        }
     }
 }
