--- a/src/assets/styles/cmps/_board-list.scss
+++ b/src/assets/styles/cmps/_board-list.scss
@@ -22,6 +22,8 @@
 
     .board-side-preview.active {
         background-color: #cce5ff;
+        border-radius: 6px;
+        width: 15.5em;
     }
 
     .preview-three-points {
