--- a/src/assets/styles/cmps/_app-header.scss
+++ b/src/assets/styles/cmps/_app-header.scss
@@ -1,53 +1,66 @@
-.app-header {
-    // background-color: $clr4;
-    // padding: 10px;
-    height: 2.75em;
+header {
+    display: grid;
+    grid-template-columns: auto 1fr;
+    grid-template-rows: auto 1fr;
+    height: em(48px);
+   
+    column-gap: 12px;
+    overflow: hidden;
+    margin-left: 24px;
+    margin-right: 24px;
+    align-items: center;
+    justify-content: space-between;
+    // background-color: $;
 
-    .user-info {
-        // background-color: $clr2;
-        // padding: 2px 8px;
-        padding-left: 100px;
-        color: $clr1;
 
-        .score {
-            background-color: $clr2;
-            color: $clr6;
-            padding: 8px;
-            margin: 10px;
-            border-radius: 50%;
-        }
+    .logo {
+        position: relative;
+        height: 42px;
+        margin-right: 16px;
 
         img {
-            width: 32px;
-            height: 32px;
-            border-radius: 50%;
-            object-fit: cover;
+            object-fit: contain;
+            height: 100%;
         }
-    }
 
-    .user-info .btn-link {
-        color: $clr2;
-    }
-
-    nav {
-        font-size: .8em;
-        // background-color: $clr5;
-        padding: 5px;
 
     }
 
-    nav a:first-child {
-        margin-right: 30px;
+    .nav-container {
+        height: 48px;
+        display: flex;
+        justify-content: end;
+        align-items: center;
+        align-self: center;
+        align-items: center;
+
     }
 
-    nav a:not(:first-child) {
-        border-top: 1px solid $clr1;
-        padding: 0 5px;
-        margin: 10px;
-    }
 
-    nav .active {
-        color: $clr1;
-    }
+
+    // .user-info .btn-link {
+    //     color: $clr2;
+    // }
+
+    // nav {
+    //     font-size: .8em;
+    //     // background-color: $clr5;
+    //     padding: 5px;
+
+    // }
+
+    // nav a:first-child {
+    //     margin-right: 30px;
+    // }
+
+    // nav a:not(:first-child) {
+    //     border-top: 1px solid $clr1;
+    //     padding: 0 5px;
+    //     margin: 10px;
+    // }
+
+    // nav .active {
+    //     color: $clr1;
+    // }
 
 }
