--- a/src/assets/styles/cmps/_board-details.scss
+++ b/src/assets/styles/cmps/_board-details.scss
@@ -1,11 +1,46 @@
-.board-details {
-    display: grid;
-    position: relative;
-    background-color: $clr6;
-    display: grid;
+// .board-details {
+//     display: grid;
+//     position: relative;
+//     background-color: $clr6;
     
+//     grid-template-rows: 190px;
+//     border-radius: 0.5em 0 0 0;
+//     min-width: 0;
+// }
+
+.app-wrapper {
+    display: grid;
+    grid-template-columns: auto 1fr;
+    grid-template-rows: auto 1fr; 
+    height: 100vh;
+    width: 100vw;
+    overflow: hidden;
+    gap: 17px;
+}
+
+.sidebar {
+    grid-row: 1 / span 2; 
+    grid-column: 1;
+}
+
+.app-header {
+    grid-row: 0;
+    grid-column: 2;
+
+}
+
+.board-details {
+    grid-row: 1;
+    grid-column: 2;
+    overflow: auto;
+    background-color: $clr6; 
+    position: relative;
+    // z-index: 0;
+    width: 100%;
+    height: 100vh;
+    position: relative;    
     grid-template-rows: 190px;
     border-radius: 0.5em 0 0 0;
-    padding: 5px;
+    min-width: 0;
     box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
 }
