--- a/src/assets/styles/cmps/_board-preview.scss
+++ b/src/assets/styles/cmps/_board-preview.scss
@@ -1,5 +1,7 @@
 .board-preview {
     display: grid;
+    grid-row: 2;
+    grid-column: 2;
     position: relative;
     width: 100%;
     box-sizing: content-box;
@@ -8,5 +10,12 @@
 
     & ul{
         list-style: none;
+    }
+
+    .board-items {
+        height: 100%;
+        width: 100%;
+        outline: none;
+        position: relative;
     }
 }
