Design improvments groups

--- a/src/assets/styles/cmps/_board-preview.scss
+++ b/src/assets/styles/cmps/_board-preview.scss
@@ -18,4 +18,9 @@
         outline: none;
         position: relative;
     }
+    .title-container{
+        display: grid;
+        grid-auto-flow: column;
+
+    }
 }
