--- a/src/assets/styles/cmps/_group-list.scss
+++ b/src/assets/styles/cmps/_group-list.scss
@@ -5,17 +5,19 @@
     .header-items {
         display: grid;
         grid-auto-flow: column;
-        grid-template-columns: repeat(auto-fill, 100px);
+        grid-template-columns: 200px repeat(auto-fill, 100px);
         border: 1px solid $clr-border;
         height: 2.25em;
         align-items: center;
         text-align: center;
+        border-right: 1px solid $clr-border;
     }
-    .dyn-cell .header-items{
+    .header-items .dyn-cell{
         border-right: 1px solid $clr-border;
         height: 2.25em;
         display: grid;
         align-self: center;
+        align-items: center;
     }
     
 }
