Add crudl - remove group

--- a/src/assets/styles/cmps/_task-list.scss
+++ b/src/assets/styles/cmps/_task-list.scss
@@ -10,7 +10,7 @@
 
     .dyn-cell {
         align-self: center;
-        height: 2.25em;
+        height: 100%;
         display: grid;
         align-items: center;
         // border-left: 1px solid $clr-border;
