--- a/src/assets/styles/cmps/_board-details.scss
+++ b/src/assets/styles/cmps/_board-details.scss
@@ -35,7 +35,7 @@
     overflow: auto;
     background-color: $clr6; 
     position: relative;
-    // z-index: 0;
+    z-index: 0;
     width: 100%;
     height: 100vh;
     position: relative;    
