--- a/src/assets/styles/cmps/_board-list.scss
+++ b/src/assets/styles/cmps/_board-list.scss
@@ -1,7 +1,7 @@
 .board-list {
     .board-option-sidebar {
         list-style-type: none;
-        font-size: 15px;
+        font-size: 14px;
         line-height: 22.5px;
         font-family: Figtree, Roboto, "Noto Sans Hebrew", "Noto Kufi Arabic", "Noto Sans JP", sans-serif;
     }
@@ -49,11 +49,13 @@
 
     .actions-border-side {
         position: absolute;
+        left: 13em;
         background-color: #fff;
         box-shadow: 0 4px 17px 6px #0000001a;
         border-radius: 8px;
         padding: 8px;
         white-space: nowrap;
+        z-index: 1;
     }
 
     .action-side {
