--- a/src/assets/styles/cmps/_board-filter.scss
+++ b/src/assets/styles/cmps/_board-filter.scss
@@ -1,5 +1,8 @@
 .board-filter {
-    display: grid;
+    margin-top: em(8px);
+    margin-left: em(6px);
+
+    // display: grid;
     // position: relative;
-    height: 173px; 
+    // height: 173px; 
 }
