--- a/src/assets/styles/setup/_variables.scss
+++ b/src/assets/styles/setup/_variables.scss
@@ -7,6 +7,9 @@ $clr5: #dff0ea;
 $clr6: #fff;
 $clr7: #222;
 
+// ScrollBar colors
+$sb-clr: #bfc3d2;
+
 // Main Colors
 $bgc-page: #eceff8;
 $clr-main: #323338;
@@ -21,6 +24,9 @@ $clr-btn-txt: #ffffff;
 
 //Border Colors 
 $clr-border: #d0d4e4;
+
+//Icon Colors 
+$clr-icon: #676879;
 
 // Label Color Options
 $clr-label-1: #9dd327;
