--- a/src/assets/styles/cmps/_board-list.scss
+++ b/src/assets/styles/cmps/_board-list.scss
@@ -3,6 +3,7 @@
         list-style-type: none;
         font-size: 14px;
         line-height: 22.5px;
+        margin-left: 6px;
         font-family: Figtree, Roboto, "Noto Sans Hebrew", "Noto Kufi Arabic", "Noto Sans JP", sans-serif;
     }
 
