--- a/src/assets/styles/cmps/_label-picker.scss
+++ b/src/assets/styles/cmps/_label-picker.scss
@@ -1,26 +1,44 @@
-
-
 .dyn-cell {
     position: relative;
     cursor: pointer;
 
-    .label-picker {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        padding: 16px 7px 0;
-        gap: 8px;
-        z-index: 1001;
-        background-color: black;
+
+
+}
+.label-picker-container {
+    display: flex;
+    justify-content: center;
+    transition: width .1s;
+    pointer-events: all;
+
         
+        .label-picker-content {
+            box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.32);
+            -webkit-box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.32);
+            -moz-box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.32);
+            
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            padding: 16px 7px 0;
+            gap: 8px;
+            z-index: 1001;
+            border-radius: 8px;
+            background-color: $bgc-main;
+            height: 400px;
+            max-width: 200px;
 
-        position: absolute;
-        // inset: 0px auto auto 0px;
-        transform: translate3d(928px, 369.333px, 0px);
+            position: absolute;
+            
+            inset: 0px auto auto 0px;
+            transform: translate3d(928px, 369.333px, 0px);
 
-        .label {
-            height: 32px;
-            width: 150px;
+
+            .label {
+                height: 32px;
+                width: 150px;
+            }
         }
-    }
+    
+
 }
