--- a/src/assets/styles/cmps/_board-details.scss
+++ b/src/assets/styles/cmps/_board-details.scss
@@ -15,7 +15,7 @@
     height: 100vh;
     width: 100vw;
     overflow: hidden;
-    gap: 17px;
+    gap: 10px;
 }
 
 .sidebar {
@@ -42,5 +42,5 @@
     grid-template-rows: 190px;
     border-radius: 0.5em 0 0 0;
     min-width: 0;
-    box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+    // box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
 }
