--- a/src/assets/styles/cmps/_label-picker.scss
+++ b/src/assets/styles/cmps/_label-picker.scss
@@ -1,44 +1,50 @@
 .dyn-cell {
     position: relative;
+    user-select: none;
     cursor: pointer;
 
+    .label-picker-container {
+        display: flex;
+        justify-content: center;
+        transition: width .1s;
+        pointer-events: none;
+        z-index: 9999;
+        position: absolute;
 
-
-}
-.label-picker-container {
-    display: flex;
-    justify-content: center;
-    transition: width .1s;
-    pointer-events: all;
-
-        
         .label-picker-content {
             box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.32);
             -webkit-box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.32);
             -moz-box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.32);
-            
-            display: flex;
-            flex-direction: column;
+
             align-items: center;
-            padding: 16px 7px 0;
-            gap: 8px;
-            z-index: 1001;
+            padding: 16px 24px 8px;
             border-radius: 8px;
             background-color: $bgc-main;
-            height: 400px;
+            // height: 400px;
             max-width: 200px;
 
-            position: absolute;
-            
-            inset: 0px auto auto 0px;
-            transform: translate3d(928px, 369.333px, 0px);
 
+            // inset: 0px auto auto 0px;
+            // transform: translate(928px, 369.333px, 0px);
+            // overflow-x: auto;
+            // overflow-y: hidden;
 
             .label {
-                height: 32px;
-                width: 150px;
+                cursor: pointer;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                border-radius: em(2px);
+                margin-bottom: 8px;
+                padding: 0 em(4px);
+                height: em(32px);
+                width: em(152px);
+                transition: transform .1s ease-in-out, opacity .1s ease-in-out;
+
+                &:hover {
+                    
+                }
             }
         }
-    
-
+    }
 }
